; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_xsk.c_ixgbe_clean_xdp_tx_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_xsk.c_ixgbe_clean_xdp_tx_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_ring = type { i32 }
%struct.ixgbe_tx_buffer = type { i32 }

@dma = common dso_local global i32 0, align 4
@len = common dso_local global i32 0, align 4
@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ixgbe_ring*, %struct.ixgbe_tx_buffer*)* @ixgbe_clean_xdp_tx_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ixgbe_clean_xdp_tx_buffer(%struct.ixgbe_ring* %0, %struct.ixgbe_tx_buffer* %1) #0 {
  %3 = alloca %struct.ixgbe_ring*, align 8
  %4 = alloca %struct.ixgbe_tx_buffer*, align 8
  store %struct.ixgbe_ring* %0, %struct.ixgbe_ring** %3, align 8
  store %struct.ixgbe_tx_buffer* %1, %struct.ixgbe_tx_buffer** %4, align 8
  %5 = load %struct.ixgbe_tx_buffer*, %struct.ixgbe_tx_buffer** %4, align 8
  %6 = getelementptr inbounds %struct.ixgbe_tx_buffer, %struct.ixgbe_tx_buffer* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @xdp_return_frame(i32 %7)
  %9 = load %struct.ixgbe_ring*, %struct.ixgbe_ring** %3, align 8
  %10 = getelementptr inbounds %struct.ixgbe_ring, %struct.ixgbe_ring* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ixgbe_tx_buffer*, %struct.ixgbe_tx_buffer** %4, align 8
  %13 = load i32, i32* @dma, align 4
  %14 = call i32 @dma_unmap_addr(%struct.ixgbe_tx_buffer* %12, i32 %13)
  %15 = load %struct.ixgbe_tx_buffer*, %struct.ixgbe_tx_buffer** %4, align 8
  %16 = load i32, i32* @len, align 4
  %17 = call i32 @dma_unmap_len(%struct.ixgbe_tx_buffer* %15, i32 %16)
  %18 = load i32, i32* @DMA_TO_DEVICE, align 4
  %19 = call i32 @dma_unmap_single(i32 %11, i32 %14, i32 %17, i32 %18)
  %20 = load %struct.ixgbe_tx_buffer*, %struct.ixgbe_tx_buffer** %4, align 8
  %21 = load i32, i32* @len, align 4
  %22 = call i32 @dma_unmap_len_set(%struct.ixgbe_tx_buffer* %20, i32 %21, i32 0)
  ret void
}

declare dso_local i32 @xdp_return_frame(i32) #1

declare dso_local i32 @dma_unmap_single(i32, i32, i32, i32) #1

declare dso_local i32 @dma_unmap_addr(%struct.ixgbe_tx_buffer*, i32) #1

declare dso_local i32 @dma_unmap_len(%struct.ixgbe_tx_buffer*, i32) #1

declare dso_local i32 @dma_unmap_len_set(%struct.ixgbe_tx_buffer*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
